// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproTileBtn > Snapshots > renders the component with all properties filled in 1`] = `
<v-btn-stub
  block="false"
  border="false"
  class="
    amelipro-tile-btn
    text-none
  "
  density="default"
  disabled="true"
  elevation="1"
  exact="false"
  flat="false"
  height="auto"
  href="modified-href"
  icon="false"
  id="modified-unique-id"
  loading="false"
  minheight="modified-tile-min-height"
  replace="false"
  ripple="false"
  size="default"
  slim="false"
  stacked="false"
  style="background-color: #DDDEDE !important; border: 2px solid #DDDEDE !important; color: #1A1B1B !important;"
  symbol="Symbol(vuetify:v-btn-toggle)"
  tag="button"
  tile="false"
  to="modified-to"
  variant="elevated"
  width="modified-tile-width"
></v-btn-stub>
`;

exports[`AmeliproTileBtn > Snapshots > renders the component with only required properties filled in 1`] = `
<v-btn-stub
  block="false"
  border="false"
  class="
    amelipro-tile-btn
    text-none
  "
  density="default"
  disabled="false"
  elevation="1"
  exact="false"
  flat="false"
  height="auto"
  icon="false"
  loading="false"
  replace="false"
  ripple="false"
  size="default"
  slim="false"
  stacked="false"
  style="background-color: #FFFFFF; border: 2px solid #FFFFFF !important; color: #1A1B1B; padding: 2rem 1.5rem;"
  symbol="Symbol(vuetify:v-btn-toggle)"
  tag="button"
  tile="false"
  variant="elevated"
  width="100%"
></v-btn-stub>
`;

exports[`AmeliproTileBtn > render correctly 1`] = `
<button
  class="
    amelipro-tile-btn
    elevation-1
    text-none
    v-btn
    v-btn--density-default
    v-btn--elevated
    v-btn--size-default
    v-btn--variant-elevated
    v-theme--light
  "
  id="my-tile-btn-id"
  style="height: auto; width: 100%; background-color: #FFFFFF; border: 2px solid #FFFFFF !important; color: #1A1B1B; padding: 2rem 1.5rem;"
  type="button"
>
  <span class="v-btn__overlay"></span>
  <span class="v-btn__underlay"></span>
  <!---->
  <span
    class="v-btn__content"
    data-no-activator=""
  >
    <!-- v-if -->
    <span
      class="
        amelipro-tile-btn__content
        d-block
        font-weight-bold
        text-center
        text-h5
      "
      id="my-tile-btn-id-text"
    >
      texte du bouton
      <!-- v-if -->
      <!-- v-if -->
      <!-- v-if -->
    </span>
    <img
      alt=""
      class="
        amelipro-tile-btn__img
        mt-4
      "
      id="my-tile-btn-id-img"
      src="img-src"
      style="width: 100px;"
    />
    <!-- v-if -->
  </span>
  <!---->
  <!---->
</button>
`;
